--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-  mainModule = 'org.zerock.chatterup'
-  mainClass = 'org.zerock.chatterup.HelloApplication'
+  mainModule = 'org.zerock.server'
+  mainClass = 'org.zerock.server.HelloApplication'
 }
 
 javafx {
